[package]
name = "rs_ervice"
version = "0.1.7"
edition = "2024"
license = "MIT"
authors = ["Lutica_CANARD <presan100@gmail.com>"]
description = "A Rust service manager for vanilla or Tokio runtime"
repository = "https://github.com/LuticaCANARD/rs-ervice"

[workspace]
members = [
    "macro_lib"
]

[dependencies]
tokio = { version = "1.45.1", features = ["full"],optional = true }
rs_ervice_macro_lib = "0.1.0" 
[build-dependencies]
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
glob = "0.3"

[features]
default = ["tokio"] 
